Fix .back gap

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -16,7 +16,7 @@ main {
   & .back {
     display: flex;
     align-items: center;
-    gap: 5rem;
+    gap: 0.5rem;
     margin-bottom: 1.5rem;
   }
 
